Seaching for operator crashes Blender #74659

Closed
opened 2020-03-11 18:33:22 +01:00 by Julien Kaspar · 9 comments
Member

System Information
Operating system: Linux-5.3.0-40-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.59

Blender Version
Broken: version: 2.83 (sub 8), branch: master, commit date: 2020-03-11 09:14, hash: e1b70e9f9c

Short description of error
When in Edit Mode an bringing up the operator search, Blender will crash if you type in S and then O.
I was specifically searching for "Solidify" but I don't know what is causing this crash.

**System Information** Operating system: Linux-5.3.0-40-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.59 **Blender Version** Broken: version: 2.83 (sub 8), branch: master, commit date: 2020-03-11 09:14, hash: `e1b70e9f9c` **Short description of error** When in Edit Mode an bringing up the operator search, Blender will crash if you type in S and then O. I was specifically searching for "Solidify" but I don't know what is causing this crash.
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Member

Added subscribers: @antoniov, @HooglyBoogly

Added subscribers: @antoniov, @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Looks like it's caused by the poll of the palette sort operator.

/home/hans/Documents/Blender-Git/blender/source/blender/editors/sculpt_paint/paint_ops.c:383

BKE_paint_get_active_from_context(C); fails and returns null but it's still used later on.

Recent changes here by @antoniov from the grease pencil refactor.

This should fix it but it's probably better to do this and also get at the root cause:

diff --git a/source/blender/editors/sculpt_paint/paint_ops.c b/source/blender/editors/sculpt_paint/paint_ops.c
index 6fe1ba0b817..317535738b0 100644
--- a/source/blender/editors/sculpt_paint/paint_ops.c
+++ b/source/blender/editors/sculpt_paint/paint_ops.c
@@ -380,6 +380,10 @@ static void PALETTE_OT_extract_from_image(wmOperatorType *ot)
 static bool palette_sort_poll(bContext *C)
 {
   Paint *paint = BKE_paint_get_active_from_context(C);
+  if (!paint) {
+    return false;
+  }
+
   Palette *palette = paint->palette;
   if (palette) {
     return true;
Looks like it's caused by the poll of the `palette sort` operator. `/home/hans/Documents/Blender-Git/blender/source/blender/editors/sculpt_paint/paint_ops.c:383` `BKE_paint_get_active_from_context(C);` fails and returns null but it's still used later on. Recent changes here by @antoniov from the grease pencil refactor. This should fix it but it's probably better to do this and also get at the root cause: ``` diff --git a/source/blender/editors/sculpt_paint/paint_ops.c b/source/blender/editors/sculpt_paint/paint_ops.c index 6fe1ba0b817..317535738b0 100644 --- a/source/blender/editors/sculpt_paint/paint_ops.c +++ b/source/blender/editors/sculpt_paint/paint_ops.c @@ -380,6 +380,10 @@ static void PALETTE_OT_extract_from_image(wmOperatorType *ot) static bool palette_sort_poll(bContext *C) { Paint *paint = BKE_paint_get_active_from_context(C); + if (!paint) { + return false; + } + Palette *palette = paint->palette; if (palette) { return true; ```
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm, checking...

Can confirm, checking...
Member

ah @HooglyBoogly was quicker...

ah @HooglyBoogly was quicker...
Antonio Vazquez self-assigned this 2020-03-12 08:59:08 +01:00

This issue was referenced by 8363e10ccc

This issue was referenced by 8363e10cccbf437bc7d9e816c9ec4de834d475b8

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74659
No description provided.