Fix T74659: Seaching for operator crashes Blender

The poll function was not checking the paint pointer.